v 4.0.6
- catch error "XXX object does not exit."
- rename some C++ classes and files
- remove useless files

v4.0.5 2020-06-15
- bug correction when z_class is in data but not in the model
- bug correction when the number of classes does not correspond to the content of z_class
- new output from MixtComp: IDClassBar
- export statistics about completed data

v4.0.2 2019-12-16
- correct variable name in a function 
- typo in error message
- use registerDoSeq when the number of cores is 1

v4.0.1 2019-08-29
- Do not use foreach and %dopar% when the number of core is 1

v4.0.0 2019-07-10
- RMixtCompIO version number now follows MixtComp number version

v0.1 2019-17-01
- code extracted from RMixtComp 0.6.1